Reduced video size by 10MB

--- a/porfolio.html
+++ b/porfolio.html
@@ -54,6 +54,121 @@
         </div>
     </nav>
 
+    <!-- PORTFOLIO SECTION -->
+    <section id="portfolio" class="section portfolio center">
+        <h3 data-aos="fade-down" data-aos-delay="600" data-aos-duration="1000">Some of my <span>projects</span></h3>
+        <!-- Subtitles -->
+        <p class="folio-subtitle" data-aos="fade-right" data-aos-delay="800" data-aos-duration="1000">All Bootstrap examples were creasted with the help of templates</p>
+        <p class="folio-subtitle" data-aos="fade-right" data-aos-delay="900" data-aos-duration="1000">See previews for project descriptions</p>
+        <!-- Terminal cursor -->
+        <div class="terminal-logo center" data-aos="fade-left" data-aos-delay="800" data-aos-duration="1000">><span class="blink">_</span></div>
+        <!-- Portfolio container -->
+        <div class="folio-container">
+            <!-- Portfolio fiter list -->
+            <ul id="filterList" class="filter-list mb40" data-aos="fade-left" data-aos-delay="600" data-aos-duration="1000"> 
+                <li id="all" onclick="showAll()" class="folio-btn active">All</li>
+                <li onclick="showCategory('bootstrap')" class="folio-btn">Bootstrap</li>
+                <li onclick="showCategory('grid')" class="folio-btn">Flex/Grid</li>
+                <li onclick="showCategory('javascipt')" class="folio-btn">JS</li>
+            </ul>
+            <!-- Portfolio items -->
+            <div class="folio-item-container">
+
+                <!-- Item 1 -->
+                <div class="folio-item grid" data-aos="fade-down" data-aos-delay="600" data-aos-duration="1000">
+                    <img src="assets/images/folio/scottsutherland/scottsutherland.jpg" alt="Scott Sutherland portfolio website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal1" class="modal-button"><i class="fa fa-globe"></i> Preview</button>                    
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 2 -->
+                <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="700" data-aos-duration="1000">
+                    <img src="assets/images/folio/uoft/uoft.jpg" alt="U of T website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal2" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://medprint.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 3 -->
+                <div class="folio-item grid" data-aos="fade-down" data-aos-delay="800" data-aos-duration="1000">
+                    <img src="assets/images/folio/jenjewell/jenjewell.jpg" alt="Jen Jewell website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal3" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 4 -->
+                <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="900" data-aos-duration="1000">
+                    <img src="assets/images/folio/organizethis/organizethis.jpg" alt="Organize This website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal4" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 5 -->
+                <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="1000" data-aos-duration="1000">
+                    <img src="assets/images/folio/pva/pva.jpg" alt="PVA website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal5" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 6 -->
+                <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="1100" data-aos-duration="1000">
+                    <img src="assets/images/folio/rohutton/rohutton.jpg" alt="Rosemary Hutton website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal6" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 7 -->
+                <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000">
+                    <img src="assets/images/folio/webcheddar/webcheddar.jpg" alt="Web Cheddar website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal7" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 8 -->
+                <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="600" data-aos-duration="1000">
+                    <img src="assets/images/folio/smashpets/smashpets.jpg" alt="Smash Pets website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal8" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+                <!-- Item 9 -->
+                <div class="folio-item grid" data-aos="fade-down" data-aos-delay="700" data-aos-duration="1000">
+                    <img src="assets/images/folio/realtorsonline/realtorsonline.jpg" alt="Realtors Online website screenshot" width="400" height="250" class="folio-image">
+                    <div class="folio-overlay">
+                        <button href="#myModal9" class="modal-button"><i class="fa fa-globe"></i> Preview</button>
+                        <a href="https://www.webcheddar.ca" target="_blank" class="button"><i class="fa fa-globe"></i> Live</a>
+                        <a href="https://github.com/Spielbergo/webcheddar" target="_blank" class="button"><i class="fab fa-github"></i> Code</a>
+                    </div>
+                </div>
+
+            </div>
+            <button onclick='folio()'>View more</button>
+        </div>
+        <hr>
+    </section>
+
     <!-- SCRIPTS -->
     <!-- Animate On Scroll -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
