--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
     <!-- NAVIGATION -->
     <nav class="navbar">
         <ul id="navbarItems" class="navbar-items" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000">
-            <li><a href="#" class="current">Home</a></li>
+            <li><a href="https://www.scottsutherland.info" class="current">Home</a></li>
             <li><a href="#about">About</a></li>
             <li class="nav-logo"><a href="#"><img src="assets/images/logo.png" alt="Scott Sutherland Logo" width="100" height="100"></a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <hr class="nav-divider">
             <div class="contact-icons">
-                <a href="#"><i class="fa fa-envelope"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-phone"></i></a>
+                <a href="mailto:scott@scottsutherland.info"><i class="fa fa-envelope"></i></a>
+                <a href="https://github.com/Spielbergo" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/scott-sutherland-7745045a/"><i class="fab fa-linkedin"></i></a>
+                <a href="tel:6473399475"><i class="fa fa-phone"></i></a>
             </div>
         </ul>
         <div>
@@ -332,29 +332,41 @@
     <section id="contact" class="section contact">
         <h3>Contact <span>Me</span></h3>
         <div class="contact-container">
+
             <div class="contact-text">
                 <h4>Scott Sutherland</h4>
                 <p>Toronto, Ontario<br>Canada</p>
                 <a href="mailto:scott@webcheddar.ca"><i class="fa fa-envelope"></i> scott@webcheddar.ca</a><br>
                 <a href="tel:6473399475"><i class="fa fa-phone"></i> (647) 339-9475</a>
+                <div class="contact-social-icons">
+                    <a href="https://github.com/Spielbergo" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/scott-sutherland-7745045a/"><i class="fab fa-linkedin"></i></a>
+                </div>
             </div>
+            
             <div class="contact-form">
                 <form action="assets/php/contact-form.php" method="POST">
+
                     <div class="half-width-input">
                         <input type="text" placeholder="First Name">
                         <input type="text" placeholder="Last Name">
                     </div>
+
                     <div class="full-width-input">
                         <input type="email" placeholder="Email">
                     </div>
+
                     <div class="full-width-input">
                         <textarea name="message" placeholder="Please type your message..." id="message" cols="30" rows="10"></textarea>
                     </div>
+
                     <div class="submit-btn">
                         <button>Submit</button>
                     </div>
+
                 </form>
             </div>
+
         </div>
     </section>
 </main>
