--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
         <ul id="navbarItems" class="navbar-items" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000">
             <li><a href="https://www.scottsutherland.info" class="current">Home</a></li>
             <li><a href="#about">About</a></li>
+            <!-- Logo -->
             <li class="nav-logo"><a href="#"><img src="assets/images/logo.png" alt="Scott Sutherland Logo" width="100" height="100"></a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <hr class="nav-divider">
+            <!-- Contact icons -->
             <div class="contact-icons">
                 <a aria-label="Email me link" href="mailto:scott@scottsutherland.info" title="Email me here or use the form"><i class="fa fa-envelope"></i></a>
                 <a aria-label="My Github link" href="https://github.com/Spielbergo" target="_blank" title="My Github"><i class="fab fa-github"></i></a>
@@ -52,6 +54,7 @@
                 <a aria-label="My phone number" href="tel:6473399475" title="My phone number"><i class="fa fa-phone"></i></a>
             </div>
         </ul>
+        <!-- Mobile menu toggle -->
         <div>
             <button aria-label="Mobile Menu Toggle" id="mobileToggle" class="mobile-toggle" onclick = "navToggle()"><i class="fa fa-bars"></i></button>
         </div>
@@ -79,7 +82,7 @@
             </div>
         </div>
 
-        <!-- Header Text -->
+        <!-- Header text -->
         <div class="header-text-container">
             <h1>Scott Su<span style="position: relative; z-index: 21;">the</span>rlan<span style="position: relative; z-index: 21;">d</span></h1>
             <h2>Front End Developer</h2>
@@ -90,7 +93,7 @@
                 </div>
         </div>
 
-        <!-- Header Images -->
+        <!-- Header image -->
         <picture>
             <!-- <source media="(max-width: 480px)" srcset="assets/images/header-img-480w.jpg">
             <source media="(max-width: 1024px)" srcset="header-img-1024w.jpg">
@@ -103,6 +106,7 @@
     <!-- ABOUT SECTION -->
     <section id="about" class="section about">
         <div class="about-container" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+            <!-- About Me section text -->
             <div class="about-text">
                 <h3>About <span>Me</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vero aliquam quis, harum, fugiat molestiae cupiditate, temporibus deleniti ducimus quibusdam eum qui modi praesentium! Placeat facilis et delectus deserunt laborum?</p>
@@ -110,6 +114,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vero aliquam quis, harum, fugiat molestiae cupiditate, temporibus deleniti ducimus quibusdam eum qui modi praesentium! Placeat facilis et delectus deserunt laborum?</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas et, error provident non optio, sint autem soluta nisi nulla reiciendis doloribus, modi iure placeat incidunt molestias dignissimos in dolores dicta!</p>
             </div>
+            <!-- Personal image -->
             <div class="about-img" data-aos="fade-left" data-aos-delay="400" data-aos-duration="1000">
                 <picture>
                     <img src="assets/images/scott.jpg" width="500" height="250" alt="Scott Sutherland leaning on a fence in a forest" title="Moi">
@@ -132,9 +137,10 @@
     <!-- RESUME SECTION -->
     <section id="resume" class="resume">
         <div class="resume-container">
-            <div class="resume-img">
+            <div class="resume-tl">
                 <h3>Res<span>ume</span></h3>      
                 <!-- Resume Timeline -->
+                <!-- Credit to Pranjal Goswami for the timeline base -->
                 <!-- https://codepen.io/pranjal-goswami/pen/RNdpOP -->
                 <div class="history-tl-container">
                     <ul class="tl">
@@ -166,6 +172,7 @@
                     </ul>
                   </div>
             </div>
+
             <div class="resume-text">
                 <!-- Resume Skill Bar -->
                 <div class="u-center">
@@ -252,7 +259,7 @@
             </div>
             </div>
             <div class="image">
-            <img src="assets/images/testimonials/testimonials-3.jpg" alt="">
+                <img src="assets/images/testimonials/testimonials-3.jpg" alt="">
             </div>
         </div>
         </div>
@@ -272,7 +279,7 @@
             </div>
             </div>
             <div class="image">
-            <img src="assets/images/testimonials/testimonials-4.jpg" alt="">
+                <img src="assets/images/testimonials/testimonials-4.jpg" alt="">
             </div>
         </div>
         </div>
@@ -311,7 +318,7 @@
             <!-- Portfolio items -->
             <div class="folio-item-container">
 
-                <!-- Item 1 -->
+                <!-- Item 1 - This portfolio page -->
                 <div class="folio-item grid" data-aos="fade-down" data-aos-delay="600" data-aos-duration="1000">
                     <img src="assets/images/folio/scottsutherland/scottsutherland.jpg" alt="Scott Sutherland portfolio website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -321,7 +328,7 @@
                     </div>
                 </div>
 
-                <!-- Item 2 -->
+                <!-- Item 2 - U of T -->
                 <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="700" data-aos-duration="1000">
                     <img src="assets/images/folio/uoft/uoft.jpg" alt="U of T website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -332,7 +339,7 @@
                     </div>
                 </div>
 
-                <!-- Item 3 -->
+                <!-- Item 3 - Jennifer Jewell -->
                 <div class="folio-item grid" data-aos="fade-down" data-aos-delay="800" data-aos-duration="1000">
                     <img src="assets/images/folio/jenjewell/jenjewell.jpg" alt="Jen Jewell website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -343,7 +350,7 @@
                     </div>
                 </div>
 
-                <!-- Item 4 -->
+                <!-- Item 4 - Organize This -->
                 <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="900" data-aos-duration="1000">
                     <img src="assets/images/folio/organizethis/organizethis.jpg" alt="Organize This website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -354,7 +361,7 @@
                     </div>
                 </div>
 
-                <!-- Item 5 -->
+                <!-- Item 5 - PVA -->
                 <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="1000" data-aos-duration="1000">
                     <img src="assets/images/folio/pva/pva.jpg" alt="PVA website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -365,7 +372,7 @@
                     </div>
                 </div>
 
-                <!-- Item 6 -->
+                <!-- Item 6 - Rosemary Hutton -->
                 <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="1100" data-aos-duration="1000">
                     <img src="assets/images/folio/rohutton/rohutton.jpg" alt="Rosemary Hutton website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -376,7 +383,7 @@
                     </div>
                 </div>
 
-                 <!-- Item 7 -->
+                 <!-- Item 7 - Web Cheddar -->
                 <div class="folio-item bootstrap" data-aos="fade-down" data-aos-duration="1000">
                     <img src="assets/images/folio/webcheddar/webcheddar.jpg" alt="Web Cheddar website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -387,7 +394,7 @@
                     </div>
                 </div>
 
-                <!-- Item 8 -->
+                <!-- Item 8 - Smash Pets -->
                 <div class="folio-item bootstrap" data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000">
                     <img src="assets/images/folio/smashpets/smashpets.jpg" alt="Smash Pets website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -398,7 +405,7 @@
                     </div>
                 </div>
 
-                <!-- Item 9 -->
+                <!-- Item 9 - Realtor Online -->
                 <div class="folio-item grid" data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000">
                     <img src="assets/images/folio/realtorsonline/realtorsonline.jpg" alt="Realtors Online website screenshot" width="400" height="250" class="folio-image">
                     <!-- Portfolio item buttons -->
@@ -465,7 +472,7 @@
                 </form>
                 <!-- Error/Success Message -->
                 <div class="message-container">
-                    <p id="messageResponse"></p>
+                    <p id="msg"></p>
                 </div>
             </div>
 
