--- a/projects/drag-and-drop/index.html
+++ b/projects/drag-and-drop/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kanban Board">
     <title>Drag and Drop</title>
-    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-title">Shit To Do Board</h1>
+    <h1 class="main-title">Kanban Board</h1>
     <div class="drag-container">
         <ul class="drag-list">
             <!-- Backlog Column -->
@@ -23,11 +21,11 @@
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
-                    <div class="add-btn" onclick="showInputBox(0);">
+                    <div class="add-btn" onclick="showInputBox(0)">
                         <span class="plus-sign">+</span>
                         <span>Add Item</span>
                     </div>
-                    <div class="add-btn solid" onclick="hideInputBox(0);">
+                    <div class="add-btn solid" onclick="hideInputBox(0)">
                         <span>Save Item</span>
                     </div>
                 </div>
@@ -38,7 +36,7 @@
             <!-- Progress Column -->
             <li class="drag-column progress-column">
                 <span class="header">
-                    <h1>Progress</h1>
+                    <h1>In Progress</h1>
                 </span>
                 <!-- Progress Content -->
                 <div id="progress-content" class="custom-scroll">
@@ -46,11 +44,11 @@
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
-                    <div class="add-btn" onclick="showInputBox(1);">
+                    <div class="add-btn" onclick="showInputBox(1)">
                         <span class="plus-sign">+</span>
                         <span>Add Item</span>
                     </div>
-                    <div class="add-btn solid" onclick="hideInputBox(1);">
+                    <div class="add-btn solid" onclick="hideInputBox(1)">
                         <span>Save Item</span>
                     </div>
                 </div>
@@ -69,33 +67,34 @@
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
-                    <div class="add-btn" onclick="showInputBox(2);">
+                    <div class="add-btn" onclick="showInputBox(2)">
                         <span class="plus-sign">+</span>
                         <span>Add Item</span>
                     </div>
-                    <div class="add-btn solid" onclick="hideInputBox(2);">
+                    <div class="add-btn solid" onclick="hideInputBox(2)">
                         <span>Save Item</span>
                     </div>
                 </div>
                 <div class="add-container">
                     <div class="add-item" contenteditable="true"></div>
                 </div>
-            </li><!-- On-hold Column -->
+            </li>
+            <!-- On Hold Column -->
             <li class="drag-column on-hold-column">
                 <span class="header">
-                    <h1>On-hold</h1>
+                    <h1>On Hold</h1>
                 </span>
-                <!-- On-hold Content -->
+                <!-- On Hold Content -->
                 <div id="on-hold-content" class="custom-scroll">
                     <ul class="drag-item-list" id="on-hold-list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(3)"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
-                    <div class="add-btn" onclick="showInputBox(3);">
+                    <div class="add-btn" onclick="showInputBox(3)">
                         <span class="plus-sign">+</span>
                         <span>Add Item</span>
                     </div>
-                    <div class="add-btn solid" onclick="hideInputBox(3);">
+                    <div class="add-btn solid" onclick="hideInputBox(3)">
                         <span>Save Item</span>
                     </div>
                 </div>
