--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>404 - Scott Sutherland | Front End Developer</title>
+        <title>Thank you! - Scott Sutherland | Front End Developer</title>
 
         <!-- SEO META TAGS -->
         <meta name="title" content="Scott Sutherland | Front End Developer">
@@ -41,7 +41,7 @@
 
     <!-- Image -->
     <div class="image">
-        <img src="assets/images/404.jpg" alt="Long trail in the woods">
+        <img src="assets/images/thankyou.jpg" alt="Long trail in the woods">
     </div>
 
     <!-- NAVIGATION -->
@@ -74,8 +74,8 @@
 
     <!-- Text -->
     <div class="text">
-        <h1>You appear to have taken the wrong trail.</h1>
-        <h2>Head back to safety before nightfall</h2>
+        <h1>Thank you for your message!</h1>
+        <h2>I will reply as soon as possible.</h2>
         <!-- CTA button -->
         <div>
             <a href="index.html" class="button">Back Home</a>
