Updated mobile nav and some styling.

--- a/thankyou.html
+++ b/thankyou.html
@@ -78,7 +78,7 @@
         <h2>I will reply as soon as possible.</h2>
         <!-- CTA button -->
         <div>
-            <a href="index.html" class="button">Back Home</a>
+            <a href="index#contact.html" class="button">Back Home</a>
         </div>
     </div>
     
