--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="title" content="Scott Sutherland | Front End Developer">
         <meta name="description" content="Experienced Toronto Web Developer using HTML, CSS, JavaScript and more.">
         <meta name="keywords" content="web developer, toronto">
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
         <meta name="author" content="Scott Sutherland">
@@ -50,15 +50,15 @@
     <nav class="navbar">
         <ul id="navbarItems" class="navbar-items" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000">
             <!-- Nav menu items -->
-            <li><a href="#home" class="nav-active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="#home" class="nav-active nav-link">Home</a></li>
+            <li><a href="#about" class="nav-link">About</a></li>
+            <li><a href="#resume" class="nav-link">Resume</a></li>
             <!-- Logo -->
             <li class="nav-logo">
                 <img src="assets/images/logo.png" alt="Scott Sutherland Logo" width="100" height="100">
             </li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
             <hr class="nav-divider">
             <!-- Contact icons -->
             <div class="contact-icons">
@@ -69,8 +69,10 @@
             </div>
         </ul>
         <!-- Mobile menu toggle -->
-        <div>
-            <button aria-label="Mobile Menu Toggle" id="mobileToggle" class="mobile-toggle" onclick = "navToggle()" style="background: transparent;"><i class="fa fa-bars"></i></button>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
     </nav>
 
@@ -136,7 +138,7 @@
                 <p>I am a Toronto based Front End Deveolper. I have been working freelance on the side since February of 2019 and I have been working part time with a company working almost exclusively on WordPress sites since January of 2020.</p>
                 <p>After my full time job ended in May of 2020 I took the time to learn. I took online courses from Zero to Mastery and freecodecamp among others. I concentrated mainly on CSS and JavaScript. </p>
                 <p>Over the last few years I have also learned products such PhotoShop, After Effects, Keap, Zoho, Zapier and more.</p>
-                <p>I love the constant learning and problem solving mixed with a little need for creativity that comes with development! </p>
+                <p>I love the constant learning and problem solving mixed with a little creativity that comes with development! </p>
             </div>
             <!-- Personal image -->
             <div class="about-img" data-aos="fade-left" data-aos-delay="400" data-aos-duration="1000">
@@ -190,7 +192,7 @@
                             Jan 2008 -<br>May 2020
                             </div>
                             <div class="item-title">Crocodile Rock - General Manager</div>
-                            <div class="item-detail">I was responsible for most aspects of the business. I hired, helped to train and coached a team of over 60 staff. I maintained and repaired all office computers, POS systems and networks in the venue. I also created promotional video loops and posters using After Effects, Photoshop and more.</div>
+                            <div class="item-detail">I was responsible for most aspects of the business. I hired, helped to train and coached a team of over 60 staff. I maintained and repaired all office computers, POS systems and networks in the venue. I also created promotional video loops and posters using After Effects, Photoshop and more. I maintained ongoing relationships with customers for years, some over a decade.</div>
                         </li>
                       
                     </ul>
@@ -234,7 +236,7 @@
                     </div>
                 </div>
                 <div class="resume-button">
-                <button style="width: 250px; margin-top: 20px;" title="Download my full resume here">Download PDF Resume</button>
+                <button style="width: 250px; margin-top: 20px;" title="Download my full resume here"><a href="/assets/Scott Sutherland Resume.pdf" target="_blank">PDF Resume</a></button>
                 </div>
             </div>
             
@@ -275,7 +277,7 @@
         <!-- Second Testimonial -->
         <div class="box">
             <i class="fas fa-quote-left quote"></i>
-            <p>Scott the lead is very tech savy with SEO, content, visuals, and web site development. He is very proficient with building a brand and getting a start up front and setter. I strongly recommend his on line services.</p>
+            <p style="font-size: 17px;">Scott the lead is very tech savy with SEO, content, visuals, and web site development. He is very proficient with building a brand and getting a start up front and setter. I strongly recommend his on line services.</p>
             <div class="content">
                 <div class="info">
                     <div class="name">Barry McLeod</div>
@@ -290,18 +292,18 @@
                 </div>
                 <!-- Client Image -->
                 <div class="image">
-                    <img src="assets/images/testimonials/testimonials-3.jpg" alt="">
+                    <img src="assets/images/testimonials/testimonials-4.jpg" alt="">
                 </div>
             </div>
         </div>
 
         <div class="box">
             <i class="fas fa-quote-left  quote"></i>
-            <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+            <p style="font-size: 14px;">Scott is hands-down the best option when it comes to bringing your website dreams to life. He pays great attention to detail, has a natural eye for design while creating an easy-to-navigate, yet unique user experience, and delivers fast results without compromising the quality of work done.</p>
             <div class="content">
                 <div class="info">
-                    <div class="name">Kristina Bellis</div>
-                    <div class="job">Freelancer | Advertiser</div>
+                    <div class="name">Ashley Windibank</div>
+                    <div class="job">Owner | Smash Pets</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -312,7 +314,7 @@
                 </div>
                 <!-- Client Image -->
                 <div class="image">
-                    <img src="assets/images/testimonials/testimonials-4.jpg" alt="">
+                    <img src="assets/images/testimonials/testimonials-3.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -487,7 +489,7 @@
                 <h4>Scott Sutherland</h4>
                 <p class="contact-subtitle">I am currently available for freelance, full or part time work.</p>
                 <!-- Contact info -->
-                <a href="mailto:scott@webcheddar.ca"><i class="fa fa-envelope"></i> scott@webcheddar.ca</a><br>
+                <a href="mailto:scott@webcheddar.ca"><i class="fa fa-envelope"></i>scott@webcheddar.ca</a><br>
                 <span><i class="fa fa-map-marker-alt"></i> Toronto, Ontario</span>
                 <!-- Social icons -->
                 <div class="contact-social-icons">
@@ -993,8 +995,8 @@
             </div>
 
             <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1, 11)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1, 11)">&#10095;</a>
+            <a class="prev" onclick="plusSlides(-1, 8)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1, 8)">&#10095;</a>
 
         </div>
         </div>
@@ -1042,8 +1044,8 @@
             </div>
 
             <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1, 12)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1, 12)">&#10095;</a>
+            <a class="prev" onclick="plusSlides(-1, 9)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1, 9)">&#10095;</a>
 
         </div>
         </div>
